# yolov5-box

./: README.md
RKNN-Deploy/rknn model efficiency/: 170_yolov5s_416_396_458_520_performance.txt  170_yolov5s_416_ori_performance.txt  falldown_416_performance.txt  falldown_640_performance.txt  v3_tiny_head_performance.txt  yolov3_416_performance.txt  yolov5-shuffle_416_performance.txt  yolov5-shuffle_640_performance.txt  yolov5n_416_performance.txt  yolov5n_640_performance.txt  yolov5n_performance.txt  yolov5s_416_performance.txt  yolov5s_640_performance.txt
RKNN-Deploy/rknn_160/cpp_template/: CMakeLists.txt
RKNN-Deploy/rknn_160/cpp_template/src/: main.cpp  misc.cpp  misc.h
yolov5/: check_anchor.py  detect.py  readme.txt  to_onnx.py  to_rknn.py  train.py
yolov5/data/: coco.yaml  coco5000.yaml  head.yaml  smoke_fire.yaml
yolov5/models/: common.py  mini.yaml  yolo.py  yolov5n.yaml
yolov5/models/PP_LCNet/: PP_LCNet.py
yolov5/models/RepVGG/: RepVGG.py
yolov5/models/mobileNet/: mobileNet.py
yolov5/models/shuffleNet/: shuffleNet.py  yolov5-shuffle.yaml
yolov5/not_used/: export_onnx.py
yolov5/utils/: augmentations.py  autoanchor.py  datasets.py  plots.py
